package domain.cart;

public class Cart {
}
