@startuml

title CUPCAKE

    namespace api {
      class api.Cupcake {
      }
    }
  


    namespace api {
      class api.Utils {
      }
    }

  


    namespace domain.items {
      class domain.items.Cake {
      }
    }

  


    namespace domain.items {
      class domain.items.CakeOptions {
      }
    }

  


    namespace domain.items {
      class domain.items.Option {
      }
    }
  


    namespace domain.order {
      class domain.order.NoOrderExists {
      }
    }

  


    namespace domain.order {
      class domain.order.Order {
      }
}
  


    namespace domain.order {
      interface domain.order.OrderRepository {
      }
    }
 
  


    namespace domain.user {
      class domain.user.InvalidPassword {
      }
    }
 
  


    namespace domain.user {
      class domain.user.User {
      }
    }
  
  

    namespace domain.user {
      class domain.user.UserExists {
      }
    }
  
  


    namespace domain.user {
      interface domain.user.UserFactory {
      }
    }
  
  


    namespace domain.user {
      class domain.user.UserNotFound {
      }
    
  }
  


    namespace domain.user {
      interface domain.user.UserRepository {
      }
    }
  
  


    namespace infrastructure {
      class infrastructure.DBCakeOptions {
      }
    }
  
  


    namespace infrastructure {
      class infrastructure.DBOrder {
      }
    }
  
  


    namespace infrastructure {
      class infrastructure.DBUser {
      }
    }
  
  


    namespace infrastructure {
      class infrastructure.Database {
      }
    }
  
  

    namespace web{
    namespace web.pages {
      class web.pages.BaseServlet {
      }
    }
  
  


    namespace web.pages {
      namespace Customer {
        class web.pages.Customer.Cart {
        }
      }
    }
  
  

    namespace web.pages {
      namespace Customer {
        class web.pages.Customer.Index {
        }
      }
    }

  

    namespace web.pages {
      namespace Customer {
        class web.pages.Customer.Login {
        }
      }
  }
  

    namespace web.pages {
      namespace Customer {
        class web.pages.Customer.Logout {
        }
      }
  }
  

    namespace web.pages {
      namespace Customer {
        class web.pages.Customer.NewOrder {
        }
      }
    }
 
  

    namespace web.pages {
      namespace Customer {
        class web.pages.Customer.Register {
        }
      }
    }
 
  

    namespace web.pages {
      namespace Customer {
        class web.pages.Customer.Reset {
        }
      }
    }
 
  

    namespace web.pages {
      namespace Customer {
        class web.pages.Customer.Shop {
        }
      }
    }
 
  


    namespace web.pages {
      namespace admin {
        class web.pages.admin.Customers {
        }
      }
    }
  
  


    namespace web.pages {
      namespace admin {
        class web.pages.admin.Items {
        }
      }
    }
  
  

    namespace web.pages {
      namespace admin {
        class web.pages.admin.Orders {
        }
      }
    }

  

    namespace web.pages {
      namespace admin {
        class web.pages.admin.Start {
        }

      }
    }
  


    namespace web.widgets {
      class web.widgets.Navbar {
      }
    }
}
  

  api.Cupcake o-- domain.items.CakeOptions : cakeOptions
  api.Cupcake o-- infrastructure.Database : database
  api.Cupcake o-- infrastructure.DBCakeOptions : dbOptions
  api.Cupcake o-- infrastructure.DBOrder : dbOrder
  api.Cupcake o-- infrastructure.DBUser : dbUser
  domain.order.Order o-- domain.user.User : user
  infrastructure.DBCakeOptions o-- infrastructure.Database : db
  infrastructure.DBOrder o-- infrastructure.Database : db
  infrastructure.DBUser o-- infrastructure.Database : db
  web.pages.Customer.Cart -up-|> web.pages.BaseServlet
  web.pages.Customer.Index -up-|> web.pages.BaseServlet
  web.pages.Customer.Login -up-|> web.pages.BaseServlet
  web.pages.Customer.Logout -up-|> web.pages.BaseServlet
  web.pages.Customer.NewOrder -up-|> web.pages.BaseServlet
  web.pages.Customer.Register -up-|> web.pages.BaseServlet
  web.pages.Customer.Reset -up-|> web.pages.BaseServlet
  web.pages.Customer.Shop -up-|> web.pages.BaseServlet
  web.pages.admin.Customers -up-|> web.pages.BaseServlet
  web.pages.admin.Items -up-|> web.pages.BaseServlet
  web.pages.admin.Orders -up-|> web.pages.BaseServlet
  web.pages.admin.Start -up-|> web.pages.BaseServlet


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
